--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "count # add code here"
+    "countries[7] = \"\" # add code here"
    ]
   },
   {
