Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -415,18 +415,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(c)"
+    "unique_countries = list(set(countries))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Italy',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'Croatia',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'Mexico',\n",
+       " 'Malta']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_countries  # ['USA', 'Finland', 'Argentina', 'South Korea', 'Morocco',\n",
     "#'Croatia','Mexico','Malta','Italy','Canada']"
