--- a/index.ipynb
+++ b/index.ipynb
@@ -424,31 +424,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Italy',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
-       " 'Croatia',\n",
-       " 'Finland',\n",
-       " 'Argentina',\n",
-       " 'Canada',\n",
-       " 'South Korea',\n",
-       " 'Mexico',\n",
-       " 'Malta']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'len'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-f75c9e3a6ecb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0munique_countries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ['USA', 'Finland', 'Argentina', 'South Korea', 'Morocco',\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#'Croatia','Mexico','Malta','Italy','Canada']\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'len'"
+     ]
     }
    ],
    "source": [
-    "unique_countries  # ['USA', 'Finland', 'Argentina', 'South Korea', 'Morocco',\n",
+    "unique_countries.len()  # ['USA', 'Finland', 'Argentina', 'South Korea', 'Morocco',\n",
     "#'Croatia','Mexico','Malta','Italy','Canada']"
    ]
   },
