Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -424,22 +424,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "['Italy',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'Croatia',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'Mexico',\n",
+       " 'Malta']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(unique_countries)  # ['USA', 'Finland', 'Argentina', 'South Korea', 'Morocco',\n",
+    "unique_countries # ['USA', 'Finland', 'Argentina', 'South Korea', 'Morocco',\n",
     "#'Croatia','Mexico','Malta','Italy','Canada']"
    ]
   },
