--- a/index.ipynb
+++ b/index.ipynb
@@ -465,9 +465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "num_of_repeats = None\n",
+    "num_of_repeats = len(countries)  \n",
     "num_of_repeats # 3"
    ]
   },
